--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "@openzeppelin/cli": "^2.7.2",
     "@openzeppelin/upgrades": "^2.8.0",
     "ganache-cli": "^6.9.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contract-loader": "^0.6.1",
+    "web3": "^1.2.6"
   }
 }
